crates/glyph-cli/tests/corpus/valid/return_row4_named_no_type.glyph
skill diagnose()
    description: "Diagnose an issue."
    flow:
        "Inspect the scope."
        return <diagnosis>
