crates/glyph-cli/tests/corpus/invalid/case_insensitive_duplicate_description.glyph
skill demo()
    description: "first"
    Description: "second"
    flow:
        "Do."
